fix: overflow, sorting data in df. clean: style.css

--- a/static/style.css
+++ b/static/style.css
@@ -10,15 +10,9 @@ body {
     color: #dfe0ec;
     font-family: 'Konkhmer Sleokchher', sans-serif;
 }
-.page_container {
-    position: relative;
-    min-height: 100vh;
-}
-
 .content_wrap {
     padding-bottom: 2.5rem;
 }
-
 .navBox {
     background-color: #090a0f;
     position: sticky;
@@ -49,27 +43,93 @@ body {
     font-size: 25px;
     text-align: center;
     align-items: center;
-    height: 300px;
-    padding: 200px;
+    height: auto;
+    width: auto;
+    padding: 50px 100px 0px 100px;
     overflow: hidden;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 100px;
 }
-.about-inline-left {
-    width: 40%;
-}
-.about-inline-right {
-    width: 400px;
-    height: 400px;
+.graph_container {
     border: 2px solid #afb1cf;
     border-radius: 15px;
-    background-color: hsl(240deg 13.04% 9.02%);
+    overflow: hidden;
+    height: auto;
+    max-width: 100%;
+    margin: 20px auto;
+    margin-bottom: 100px;
+    position: relative;
+    z-index: 0;
 }
 .projects {
     font-size: 25px;
     background-color: #503b61;
+}
+.projects_outer {
+    background: #503b61;
+    margin-right: -200px;
+    margin-left: -200px;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-bottom: 100px;
+    padding-top: 10px;
+    text-align: center;
+    justify-content: center;
+    font-size: 20px;
+}
+.projects_inner {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.projects_container {
+    display: grid;
+    gap: 30px 50px;
+    grid-template-columns: auto auto auto;
+    padding: 10px;
+}
+.projects_container > div {
+    background-color: rgb(20,20,26);
+    border: 2px solid #afb1cf;
+    border-radius: 15px;
+    font-size: 20px;
+    text-align: center;
+    grid-template-columns: repeat(3, minmax(200px, 1fr));
+    max-width: 100%;
+    overflow: hidden;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 150px; /* Ensures the item has a minimum height */
+    height: auto; /* Adjusts height based on content */
+    padding: 10px; /* Prevents content from sticking to edges */
+
+    background-image: url('/static/assets/images/elementor-placeholder-image.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.projects_container > div > p {
+    background-color: rgba(20,20,26, 50%);
+    color: white;
+    text-align: center;
+    padding: 10px;
+    border-radius: 10px;
+}
+.links_outer {
+    background: #090a0f;
+    margin-right: -200px;
+    margin-left: -200px;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-bottom: 100px;
+    padding-top: 10px;
+    text-align: center;
+    justify-content: center;
+    font-size: 20px;
 }
 .footer_position {
     display: flex;
@@ -86,61 +146,4 @@ body {
     padding-left: 200px;
     padding-right: 200px;
     padding-bottom: 10px;
-}
-.graph_container {
-    border: 2px solid #afb1cf;
-    border-radius: 15px;
-    overflow: hidden;
-    height: auto;
-    max-width: 100%;
-    margin: 20px auto;
-    margin-bottom: 100px;
-    position: relative;
-    z-index: 0;
-}
-.projects_outer {
-    background: #503b61;
-    margin-right: -200px;
-    margin-left: -200px;
-    padding-left: 200px;
-    padding-right: 200px;
-    padding-bottom: 100px;
-    padding-top: 10px;
-    text-align: center;
-    justify-content: center;
-    font-size: 25px;
-}
-.projects_inner {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: 100%;
-}
-
-.projects_container {
-    display: grid;
-    gap: 30px 50px;
-    grid-template-columns: auto auto auto;
-    padding: 10px;
-}
-.projects_container > div {
-    background-color: rgb(20,20,26);
-    border: 2px solid #afb1cf;
-    border-radius: 15px;
-    padding: 20px;
-    font-size: 20px;
-    text-align: center;
-    height: 200px;
-    width: 330px;
-
-    background-image: url('/static/assets/images/elementor-placeholder-image.webp');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-.projects_container > div > p {
-    background-color: rgba(20,20,26, 50%);
-    color: white;
-    text-align: center;
-    padding: 10px;
-    border-radius: 10px;
 }
